<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layNumero1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblNumero1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:text="@string/lblNumero1"
            android:textAlignment="textEnd"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtNumero1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hintNumeros"
            android:inputType="numberSigned"
            android:textAlignment="textEnd"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layNumero2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblNumero2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:text="@string/lblNumero2"
            android:textAlignment="textEnd"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtNumero2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hintNumeros"
            android:inputType="numberSigned"
            android:textAlignment="textEnd"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layNumero3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblNumero3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:text="@string/lblNumero3"
            android:textAlignment="textEnd"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtNumero3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hintNumeros"
            android:inputType="numberSigned"
            android:textAlignment="textEnd"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblDisplay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="N"
            android:textAlignment="center"
            android:textColor="@color/rojo"
            android:textSize="38dp" />

        <TextView
            android:id="@+id/lblDisplay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="N"
            android:textAlignment="center"
            android:textColor="@color/azul"
            android:textSize="38dp" />

        <TextView
            android:id="@+id/lblDisplay3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="N"
            android:textAlignment="center"
            android:textColor="@color/verde"
            android:textSize="38dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layBotones1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMayor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/verde"
            android:onClick="mayor"
            android:text="@string/btnMayor" />

        <Button
            android:id="@+id/btnMenor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/verde"
            android:onClick="menor"
            android:text="@string/btnMenor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layBotones2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOrdenarAscendente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/azul"
            android:onClick="ordenarAscendente"
            android:text="@string/btnOrdenarAscendente" />

        <Button
            android:id="@+id/btnOrdenarDescendente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/azul"
            android:onClick="ordenarDescendente"
            android:text="@string/btnOrdenarDescendente" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layBotones3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/rojo"
            android:onClick="borrar"
            android:text="@string/btnBorrar" />
    </LinearLayout>

</LinearLayout>